# A.YLM

./: .gitignore  .markdownlint.json  .output.txt  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE_MIT  README.md  config.env.example  fuse.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_sharp.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  code-quality.yml  model-test.yml  release.yml
archive/removed_tests_20260113/tests/: __init__.py  test_coordinate_utils.py
configs/: constitution_example.yaml
docs/: DEPENDENCY_LICENSES.md  PROJECT_DESCRIPTION.txt
extensions/aylm_mlx_vlm/: README.md  pyproject.toml
extensions/aylm_mlx_vlm/src/aylm_mlx_vlm/: __init__.py  cli.py
inputs/input_images/: README.md
local_only/: README_LOCAL.md
outputs/: README.md
scripts/: activate_project_env.sh  coordinate_utils.py  install_deps.sh  pointcloud_voxelizer.py  preload_sharp_model.py  run_mlx_demo.sh  undistort_iphone.py
src/aylm/: __init__.py  cli.py
src/aylm/api/: __init__.py  app.py  session.py
src/aylm/constitution/: __init__.py  adapter.py  base.py  command_parser.py  config.py  default_generator.py  evaluator.py  registry.py  scorer.py  training.py  types.py  validator.py  weighted_scorer.py
src/aylm/constitution/principles/: __init__.py  collision.py  following.py  lane.py  speed.py  ttc.py
src/aylm/navigation_demo/: __init__.py  artifacts.py  calibrator.py  config.py  learning_store.py  overlay.py  prompt_calibrator.py  providers.py  runner.py
src/aylm/tools/: __init__.py  constitution_demo.py  constitution_integration.py  coordinate_utils.py  json_utils.py  motion_estimator.py  multiframe_fusion.py  object_detector.py  object_tracker.py  obstacle_marker.py  pipeline_processor.py  pointcloud_slicer.py  pointcloud_voxelizer.py  preload_sharp_model.py  semantic_fusion.py  semantic_types.py  undistort_iphone.py  video_config.py  video_extractor.py  video_pipeline.py  video_types.py  voxel_player.py
tests/: __init__.py  conftest.py
tests/integration/: test_calibration_loop.py  test_cli.py
tests/unit/: conftest.py  test_api.py  test_calibrator.py  test_constitution.py  test_imports.py  test_learning_store.py  test_motion_estimator.py  test_navigation_demo.py  test_object_tracker.py  test_obstacle_marker.py  test_pipeline_processor.py  test_pointcloud_voxelizer.py  test_prompt_calibrator.py  test_semantic_fusion.py  test_video_config.py  test_video_extractor.py  test_video_pipeline.py  test_video_types.py  test_voxel_player.py
