[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aylm"
version = "1.0.0"
description = "A.YLM - Single-Image 3D Reconstruction and Intelligent Navigation System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TRIP(appergb)", email = "appergb@github.com"},
]
maintainers = [
    {name = "TRIP(appergb)", email = "appergb@github.com"},
]
keywords = [
    "3D Reconstruction",
    "Computer Vision",
    "Deep Learning",
    "Navigation",
    "Point Cloud",
    "Gaussian Splatting",
    "SLAM",
    "Intelligent Systems",
    "Robotics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "open3d>=0.18.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "plyfile>=1.0.0",
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "Pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/appergb/A.YLM"
Repository = "https://github.com/appergb/A.YLM"
Issues = "https://github.com/appergb/A.YLM/issues"
Discussions = "https://github.com/appergb/A.YLM/discussions"

[project.scripts]
aylm = "aylm.cli:main_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F"]
ignore = []
