[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aylm"
version = "2.0.0"
description = "AYLM - Advanced YLM for 3D Gaussian Splatting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "scipy",
    "plyfile",
    "torch",
    "torchvision",
    "Pillow",
    "opencv-python",
    "matplotlib",
]

[project.optional-dependencies]
full = [
    "open3d>=0.18.0",
]
semantic = [
    "ultralytics>=8.3.0",
]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff",
]
all = [
    "open3d>=0.18.0",
    "ultralytics>=8.3.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
aylm = "aylm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
