[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aylm"
version = "2.0.0"
description = "A.YLM: Hybrid End-to-End Autonomous Driving Perception System based on 3D Gaussian Splatting with Voxel Occupancy 2.0"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "scipy",
    "plyfile",
    "torch",
    "torchvision",
    "Pillow",
    "opencv-python",
    "matplotlib",
]

[project.optional-dependencies]
full = [
    "open3d>=0.18.0",
]
semantic = [
    "ultralytics>=8.3.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
    "mypy",
]
all = [
    "open3d>=0.18.0",
    "ultralytics>=8.3.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
aylm = "aylm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "B905",   # zip without strict
    "RUF001", # ambiguous unicode in string (中文逗号等)
    "RUF002", # ambiguous unicode in docstring
    "RUF003", # ambiguous unicode in comment
    "RUF022", # __all__ not sorted (按功能分组更清晰)
    "TC002",  # move import into TYPE_CHECKING (运行时需要)
]

[tool.ruff.lint.isort]
known-first-party = ["aylm"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "ml-sharp/",
    "aylm_env/",
]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
